--- a/Garden.WebUI/bin/Garden.WebUI.dll.config
+++ b/Garden.WebUI/bin/Garden.WebUI.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GardenDb" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\GardenDb.mdf" />
+    <add name="GardenDb" providerName="System.Data.SqlClient" connectionString="Data Source=User-PC\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=GardenDb.mdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
